# enimerosi

./: .gitignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json
cdk/: package-lock.json  package.json
cdk/enimerosi-ts-lib/: package-lock.json
cdk/enimerosi-ts-lib/src/: db.ts  dbThread.ts  index.ts  (+4 more)
cdk/lib/: enimerosi-stack.ts
cdk/process-email-lambda/: index.ts  package-lock.json  package.json
cdk/process-email-lambda-rs/: Cargo.toml
cdk/process-email-lambda-rs/src/: main.rs
cdk/test/: enimerosi.test.ts
enimerosi-ts-lib/: jestconfig.json  package-lock.json  package.json  tsconfig.json
enimerosi-ts-lib/src/: db.ts  dbThread.ts  emailNotification.ts  index.ts  mention.ts  notification.ts  thread.ts
enimerosi-ts-lib/tests/: rust-lang-rust-issue.eml  salsa-new-pr.eml  salsa-pr-comment.eml  salsa-review-approved.eml  test-email-parsing.ts  test-issue-comment.ts  test-pr-team-mention.eml  test-thread.ts  test2.eml
get-notifications-lambda/: codegen.yaml  index.ts  package-lock.json  package.json  tsconfig.json
get-notifications-lambda/src/: notifications.ts  process_email.ts  threads.ts
graphql/: enimerosi.graphql
lambda/: codegen.yaml  index.ts  package.json  test.json  tsconfig.json
lambda/src/: api_gateway.ts  appsync.ts  notifications.ts  process_email.ts  threads.ts
lib/: enimerosi-stack.ts
process-email-lambda/: index.ts  package-lock.json  package.json
src/: cdk.json  package-lock.json  package.json
src/lib/: src-stack.ts
src/test/: src.test.ts
thread-listing-lambda/: index.ts  package-lock.json  package.json
(+4 files in other folders)
