[package]
name = "process-email-lambda-rs"
version = "0.1.0"
edition = "2021"

# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
aws-types = "0.12.0"
aws_lambda_events = { version = "0.6.1", default-features = false, features = ["s3"] }
email-parser = { version = "0.5.0", default-features = false, features = ["subject", "from", "to", "cc", "date"] }
lambda_runtime = "0.5.1"
regex = "1.5.6"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


